--- a/staplesgotclass/Base.lproj/Main.storyboard
+++ b/staplesgotclass/Base.lproj/Main.storyboard
@@ -612,7 +612,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vwG-1E-hCa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4157.6000000000004" y="2690.1049475262371"/>
+            <point key="canvasLocation" x="4174" y="3390"/>
         </scene>
         <!--About-->
         <scene sceneID="N7t-VP-O3L">
@@ -652,7 +652,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FqC-rh-7Rh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4927.1999999999998" y="2690.1049475262371"/>
+            <point key="canvasLocation" x="4943" y="3390"/>
         </scene>
         <!--Staples Got Class-->
         <scene sceneID="tne-QT-ifu">
@@ -804,7 +804,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eCh-PD-xgq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2784.8000000000002" y="3142.5787106446778"/>
+            <point key="canvasLocation" x="4174" y="2681"/>
         </scene>
         <!--Set HomeworkVC-->
         <scene sceneID="T6k-D9-fkf">
@@ -848,7 +848,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IaA-Kg-Waz">
-                                                    <rect key="frame" x="10" y="7.5" width="322" height="17"/>
+                                                    <rect key="frame" x="10.5" y="7.5" width="322" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -2345,7 +2345,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="32r-2a-PNq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3344.8000000000002" y="2690.1049475262371"/>
+            <point key="canvasLocation" x="3482" y="3390"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bpb-qF-gFZ">
@@ -2466,7 +2466,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yzr-tm-CoZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1845.5999999999999" y="3142.5787106446778"/>
+            <point key="canvasLocation" x="3482" y="2682"/>
         </scene>
     </scenes>
     <resources>
@@ -2488,10 +2488,10 @@
         <image name="usersIcon.png" width="100" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="uxm-2y-bLg"/>
-        <segue reference="Wk5-fx-GIZ"/>
-        <segue reference="Mpo-zk-SGw"/>
-        <segue reference="kf9-fy-F3n"/>
         <segue reference="Fa7-BJ-f92"/>
+        <segue reference="ub8-Te-EcC"/>
+        <segue reference="Wk5-fx-GIZ"/>
+        <segue reference="uxm-2y-bLg"/>
+        <segue reference="kf9-fy-F3n"/>
     </inferredMetricsTieBreakers>
 </document>
