--- a/staplesgotclass/Base.lproj/Main.storyboard
+++ b/staplesgotclass/Base.lproj/Main.storyboard
@@ -717,73 +717,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="126" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hfm-d9-R8s">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hfm-d9-R8s">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="126" id="pEY-XA-sib" customClass="SportsCell" customModule="staplesgotclass" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="126"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="90" id="pEY-XA-sib" customClass="SportsCell" customModule="staplesgotclass" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pEY-XA-sib" id="hvL-sA-ME8">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="125.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sport Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SE6-LC-3Xw">
-                                                    <rect key="frame" x="95" y="31" width="185" height="28"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sport Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SE6-LC-3Xw">
+                                                    <rect key="frame" x="45" y="42" width="112" height="25.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="H" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Stm-fi-5j6">
-                                                    <rect key="frame" x="12" y="16" width="21.5" height="36"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                    <color key="textColor" red="0.80784313730000001" green="0.80673694610000002" blue="0.80673694610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <rect key="frame" x="8" y="33.5" width="25.5" height="41"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="35"/>
+                                                    <color key="textColor" red="0.15674439072608948" green="0.37381660938262939" blue="0.73343563079833984" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SeS-Nm-ErW">
-                                                    <rect key="frame" x="43" y="86" width="290" height="1"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" red="0.66533153550000002" green="0.66533153550000002" blue="0.66533153550000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="School Address" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bH3-f3-cNx">
-                                                    <rect key="frame" x="26" y="86" width="333" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="School Address" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bH3-f3-cNx">
+                                                    <rect key="frame" x="266" y="22.5" width="101" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.66533153550000002" green="0.66533153550000002" blue="0.66533153550000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBe-bl-bhh">
-                                                    <rect key="frame" x="343.5" y="16" width="19.5" height="36"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BXB-ri-0BG">
+                                                    <rect key="frame" x="324" y="42.5" width="43" height="23"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
+                                                    <color key="textColor" red="0.18156249821186066" green="0.42604514956474304" blue="0.5373498797416687" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cec-4G-l8N">
-                                                    <rect key="frame" x="117" y="8" width="151" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BXB-ri-0BG">
-                                                    <rect key="frame" x="131" y="58" width="122" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cec-4G-l8N">
+                                                    <rect key="frame" x="8" y="3" width="36" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Stm-fi-5j6" firstAttribute="top" secondItem="hvL-sA-ME8" secondAttribute="topMargin" constant="8" id="3Nb-Qt-Exc"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="rBe-bl-bhh" secondAttribute="trailing" constant="4" id="3Vh-bc-g9P"/>
-                                                <constraint firstItem="Stm-fi-5j6" firstAttribute="leading" secondItem="hvL-sA-ME8" secondAttribute="leadingMargin" constant="4" id="CbD-Oc-KVp"/>
-                                                <constraint firstItem="rBe-bl-bhh" firstAttribute="top" secondItem="hvL-sA-ME8" secondAttribute="topMargin" constant="8" id="qQm-Le-97S"/>
+                                                <constraint firstItem="BXB-ri-0BG" firstAttribute="trailing" secondItem="hvL-sA-ME8" secondAttribute="trailingMargin" id="3az-qa-Fxh"/>
+                                                <constraint firstItem="Stm-fi-5j6" firstAttribute="leading" secondItem="hvL-sA-ME8" secondAttribute="leadingMargin" id="6Q4-th-1Ky"/>
+                                                <constraint firstItem="BXB-ri-0BG" firstAttribute="centerY" secondItem="hvL-sA-ME8" secondAttribute="centerY" constant="9.25" id="AJI-YQ-Wae"/>
+                                                <constraint firstItem="bH3-f3-cNx" firstAttribute="trailing" secondItem="hvL-sA-ME8" secondAttribute="trailingMargin" id="HOW-1w-BUF"/>
+                                                <constraint firstItem="Stm-fi-5j6" firstAttribute="top" secondItem="Cec-4G-l8N" secondAttribute="bottom" constant="10" id="JvF-rQ-C43"/>
+                                                <constraint firstItem="Stm-fi-5j6" firstAttribute="centerY" secondItem="hvL-sA-ME8" secondAttribute="centerY" constant="9.25" id="UWY-Sf-Bjv"/>
+                                                <constraint firstItem="Cec-4G-l8N" firstAttribute="leading" secondItem="hvL-sA-ME8" secondAttribute="leadingMargin" id="mUA-gl-JH9"/>
+                                                <constraint firstItem="BXB-ri-0BG" firstAttribute="top" secondItem="bH3-f3-cNx" secondAttribute="bottom" constant="3" id="qZ5-J7-E8x"/>
+                                                <constraint firstItem="SE6-LC-3Xw" firstAttribute="leading" secondItem="Stm-fi-5j6" secondAttribute="trailing" constant="11.5" id="wJe-R3-6M0"/>
+                                                <constraint firstItem="SE6-LC-3Xw" firstAttribute="centerY" secondItem="hvL-sA-ME8" secondAttribute="centerY" constant="10" id="yom-Nt-aEH"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="away" destination="rBe-bl-bhh" id="qYA-3B-f6B"/>
                                             <outlet property="date" destination="Cec-4G-l8N" id="xft-0b-BgZ"/>
                                             <outlet property="home" destination="Stm-fi-5j6" id="NrG-1P-OmR"/>
                                             <outlet property="school" destination="bH3-f3-cNx" id="wwQ-14-O9J"/>
@@ -796,6 +785,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hfm-d9-R8s" secondAttribute="trailing" id="B8A-F5-6o1"/>
+                            <constraint firstItem="hfm-d9-R8s" firstAttribute="top" secondItem="Uf1-SX-Dxx" secondAttribute="top" id="Yna-tK-NFn"/>
+                            <constraint firstItem="mQK-5B-qhz" firstAttribute="top" secondItem="hfm-d9-R8s" secondAttribute="bottom" id="bjg-f6-fDJ"/>
+                            <constraint firstItem="hfm-d9-R8s" firstAttribute="leading" secondItem="Uf1-SX-Dxx" secondAttribute="leading" id="sXR-gB-Bex"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Zdb-3j-iMI"/>
                     <connections>
@@ -804,7 +799,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eCh-PD-xgq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4174" y="2681"/>
+            <point key="canvasLocation" x="4173.6000000000004" y="2680.2098950524742"/>
         </scene>
         <!--Set HomeworkVC-->
         <scene sceneID="T6k-D9-fkf">
@@ -2488,10 +2483,10 @@
         <image name="usersIcon.png" width="100" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Fa7-BJ-f92"/>
-        <segue reference="ub8-Te-EcC"/>
-        <segue reference="Wk5-fx-GIZ"/>
-        <segue reference="uxm-2y-bLg"/>
         <segue reference="kf9-fy-F3n"/>
+        <segue reference="uxm-2y-bLg"/>
+        <segue reference="xTU-HF-hhu"/>
+        <segue reference="ub8-Te-EcC"/>
+        <segue reference="Fa7-BJ-f92"/>
     </inferredMetricsTieBreakers>
 </document>
